# test_pytorch_gpu

./: .gitignore  LICENSE  README.MD  README.md  setup.cfg
src/: run_cifar.py
