[metadata]
name = test_pytorch_gpu
version = attr: src.__version__
description = Check pytorch + GPU is seted up
long_description = file: README.md, LICENSE
license = MIT License
keywords = pytorch, GPU, test setup
url = https://github.com/ademyanchuk/test_pytorch_gpu
author = "Alexey Demyanchuk"
author_email = alexeydemyanchuk@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = False
packages = find:
install_requires =
    torch >=1.9.0
    torchvision >= 0.10.0
python_requires = >=3.8

[options.entry_points]
console_scripts =
    run_cifar = src.run_cifar:main

[options.extras_require]
dev =
    black >= 21.5b
    flake8 >= 3.9
    isort >= 5.9